--- a/FrontEnd/src/components/styles/OutputSection.css
+++ b/FrontEnd/src/components/styles/OutputSection.css
@@ -14,6 +14,6 @@
 }
 
 .file-items-container {
-  border-bottom: 2em
+  margin-bottom: 2em
 }
 
